--- a/DoAnMon/Views/ClassRooms/GetAllHomeWork.cshtml
+++ b/DoAnMon/Views/ClassRooms/GetAllHomeWork.cshtml
@@ -9,7 +9,7 @@
 
 
 <form id="Search-form" method="get">
-	<input type="text" id="query" name="query" placeholder="Nhập tên bài tập hoặc mã lớp" class="search-input" value="@Model.CurrentQuery" />
+	<input type="text" id="query" name="query" placeholder="Nhập tên bài tập hoặc mã lớp" class="search-input" value="@Model.CurrentQuery" style="width: 70%;" />
 	<input id="searchButton" type="submit" value="Search" />
 </form>
 <div style="margin: 10px auto;">
