Tạo user Admin khi vừa tạo database và role teacher

--- a/DoAnMon/Views/ClassRooms/Create.cshtml
+++ b/DoAnMon/Views/ClassRooms/Create.cshtml
@@ -62,7 +62,7 @@
                                             </div>
                                             <div class="form-group">
                                                 <label for="Description" class="control-label">Mô tả lớp:</label>
-                                                <input name="Description" id="Description" class="form-control custom-input-width" required />
+                                                <input name="Description" id="Description" class="form-control custom-input-width" />
                                                 <span id="DescriptionError" class="text-danger"></span>
                                             </div>
                                         </div>
