--- a/DoAnMon/Views/ClassRooms/GetAllHomeWork.cshtml
+++ b/DoAnMon/Views/ClassRooms/GetAllHomeWork.cshtml
@@ -4,6 +4,8 @@
 @{
 	ViewData["Title"] = "GetAllHomeWork";
 	Layout = "~/Views/Shared/_Layout1.cshtml";
+	var listBaiNop = ViewBag.Bainop as List<BaiNop>;
+	var listClassDetail = ViewBag.ClassroomDetail as List<ClassroomDetail>;
 }
 
 
@@ -74,6 +76,10 @@
 
 	@foreach (var item in Model)
 	{
+		var countGiao = listClassDetail.Where(p => p.ClassRoomId == item.ClassRoomId).Count();
+		var countNop = listBaiNop.Where(p => p.BaiTapId == item.Id).Count();
+		var countCham = listBaiNop.Where(p => p.BaiTapId == item.Id && p.daChamDiem == 1).Count();
+
 		<div class="item">
 			<div class="assignment" style="height: 30vh;">
 				<div class="assignment-content"
@@ -82,6 +88,9 @@
 					<p class="assignment-description">
 						@item.Content
 					</p>
+					<div style ="display: flex; float: right; margin-right: 10px; border: 1px solid groove;">
+						<p>Đã Giao: @countGiao <br />Đã nộp: @countNop <br />Đã chấm: @countCham </p>
+					</div>
 				</div>
 				@if (User.IsInRole("Teacher"))
 				{
