Chỉnh sửa layout lại

--- a/DoAnMon/Views/ClassRooms/GetAllBTStu.cshtml
+++ b/DoAnMon/Views/ClassRooms/GetAllBTStu.cshtml
@@ -6,7 +6,7 @@
 
 @{
 	ViewData["Title"] = "GetAllStu";
-	Layout = "~/Views/Shared/_Layout1.cshtml";
+	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Bài nộp của sinh viên</h2>
