--- a/DoAnMon/Views/ClassRooms/GetAllHomeWork.cshtml
+++ b/DoAnMon/Views/ClassRooms/GetAllHomeWork.cshtml
@@ -3,7 +3,7 @@
 
 @{
 	ViewData["Title"] = "GetAllHomeWork";
-	Layout = "~/Views/Shared/_Layout1.cshtml";
+	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 
