--- a/DoAnMon/Views/ClassRooms/AddListSV.cshtml
+++ b/DoAnMon/Views/ClassRooms/AddListSV.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewData["Title"] = "AddListSV";
-    Layout = "~/Views/Shared/_Layout1.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>@ViewData["Title"]</h2>
