--- a/DoAnMon/Views/ClassRooms/Details.cshtml
+++ b/DoAnMon/Views/ClassRooms/Details.cshtml
@@ -9,7 +9,7 @@
 
 @{
 	ViewData["Title"] = "Details";
-	Layout = "~/Views/Shared/_Layout1.cshtml";
+	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 
