--- a/DoAnMon/Views/ClassRooms/Edit.cshtml
+++ b/DoAnMon/Views/ClassRooms/Edit.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["Title"] = "Edit";
-    Layout = "~/Views/Shared/_Layout1.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1 style="font-size:30px;font-weight:bold; color: #FA7070; text-align:center;">CHỈNH SỬA LỚP HỌC</h1>
