--- a/DoAnMon/Views/Shared/_Layout.cshtml
+++ b/DoAnMon/Views/Shared/_Layout.cshtml
@@ -2,102 +2,279 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>@ViewData["Title"] - QUẢN LÝ PHÒNG HỌC TRỰC TUYẾN</title>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap">
-	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-	<link rel="stylesheet" href="~/DoAnMon.styles.css" asp-append-version="true" />
-	<link rel="icon" href="/images/Logo_Web.png" type="image/x-icon">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - QUẢN LÝ PHÒNG HỌC TRỰC TUYẾN</title>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link href="/assets/css/custom.css" rel="stylesheet" />
+
+    <!-- BOOTSTRAP STYLES-->
+    <link href="/assets/css/bootstrap.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <!-- FONTAWESOME STYLES-->
+    <link href="/assets/css/font-awesome.css" rel="stylesheet" />
+    <!--CUSTOM BASIC STYLES-->
+    <link href="/assets/css/basic.css" rel="stylesheet" />
+    <!--CUSTOM MAIN STYLES-->
+    <link href="/assets/css/custom.css" rel="stylesheet" />
+    <!-- GOOGLE FONTS-->
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
+    <style>
+        /*PHẦN BANNER*/
+        .banner {
+            background-color: #f2f2f2; /* Màu nền của khung banner */
+            height: 150px; /* Chiều cao của khung banner */
+            width: 100%; /* Độ rộng của khung banner sẽ bằng với độ rộng của màn hình */
+            /* Nếu bạn muốn sử dụng hình ảnh nền thay vì màu nền, bạn có thể sử dụng thuộc tính background-image */
+            /* background-image: url('path/to/your/image.jpg'); */
+            /* background-size: cover; */
+            /* background-position: center; */
+            /* background-repeat: no-repeat; */
+            text-align: center;
+            padding: 25px 14px;
+            font-family: Georgia, 'Times New Roman', Times, serif;
+        }
+        /*PHẦN MENU*/
+        nav {
+            background-color: #333;
+            height: 60px;
+        }
+
+        .menu {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: flex-end;
+        }
+
+            .menu li {
+                /* float: left; */
+                display: flex;
+                margin-right: 50px;
+            }
+
+                .menu li.login {
+                    margin-left: 600px; /* Phần tử logout sẽ nằm bên phải */
+                }
+
+                    .menu li.login a:hover {
+                        text-decoration: underline; /* Phần tử logout sẽ nằm bên phải */
+                    }
+
+                .menu li a {
+                    display: block;
+                    color: rgb(224, 215, 215);
+                    text-align: center;
+                    padding: 16px;
+                    font-size: 20px;
+                    text-decoration: none;
+                    /* margin-right: 50px; */
+                }
+
+                    .menu li a:hover {
+                        text-decoration: none;
+                        color: rgb(224, 215, 215);
+                    }
+
+                    .menu li a.selected {
+                        background-color: #017b48;
+                        color: hsl(0, 0%, 100%);
+                        text-decoration: none;
+                    }
+
+        .carousel-indicators li {
+            background-color: #6c6c6c;
+        }
+
+        .carousel-indicators .active {
+            background-color: #0e8b00;
+        }
+
+        body, html {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        .container {
+            display: flex;
+            width: 1100px;
+            justify-content: center; /* Căn giữa nội dung */
+        }
+
+        .sidebar,
+        .main-content,
+        .sidebar-right {
+            padding: 20px;
+        }
+        /* PHẦN NỘI DUNG BÊN TRÁI*/
+        .sidebar {
+            width: 200px; /* Độ rộng của cột chủ đề */
+            background-color: #ccc;
+            margin-top: 20px;
+            right: 0;
+        }
+
+            .sidebar ul {
+                list-style-type: none;
+                padding: 0;
+                margin: 0;
+                display: block;
+            }
+
+                .sidebar ul li {
+                    border-bottom: 1px solid #949191;
+                    width: 100%;
+                    display: block;
+                }
+
+                    .sidebar ul li:last-child {
+                        border-bottom: none; /* Loại bỏ đường viền ở mục cuối cùng */
+                    }
+
+                    .sidebar ul li a {
+                        /* text-decoration: none; */
+                        color: #333;
+                        font-size: 15px;
+                        padding: 5px;
+                        /* display: block; */
+                        text-align: left;
+                        overflow: hidden;
+                        white-space: nowrap;
+                        text-overflow: ellipsis;
+                    }
+
+                        .sidebar ul li a:hover {
+                            text-decoration: underline;
+                            color: #333;
+                            background-color: #fff;
+                            font-size: 15px;
+                            outline: none;
+                        }
+
+            .sidebar h2 {
+                margin-top: 30px; /* Loại bỏ khoảng cách trên đầu tiêu đề */
+                margin-bottom: 10px; /* Tạo khoảng cách dưới tiêu đề */
+            }
+        /*PHẦN NỘI DUNG CHÍNH*/
+        .main-content {
+            flex-grow: 1;
+            background-color: #fff;
+            /*Khoảng cách giữa cột chủ đề và cột nội dung bên phải */
+            width: 650px;
+            background-color: antiquewhite;
+            margin-top: 20px;
+        }
+
+            .main-content .post-content {
+                text-overflow: inherit;
+                overflow: auto;
+                display: block;
+                -webkit-line-clamp: initial;
+                -webkit-box-orient: initial;
+            }
+        /*PHẦN NỘI DUNG BÊN PHẢI*/
+        .sidebar-right {
+            width: 250px; /* Độ rộng của cột nội dung bên phải */
+            background-color: #f0f0f0;
+            margin-top: 20px;
+            height: 800px;
+            overflow-y: auto;
+        }
+
+        .post {
+            border: 1px solid #ccc; /* Đường viền khung bài viết */
+            padding: 0; /*Khoảng cách giữa đường viền và nội dung */
+            margin-bottom: 20px; /* Khoảng cách giữa các bài viết */
+            /* overflow: hidden;
+                    text-overflow: ellipsis; */
+            width: 100%;
+            /* height: 300px; */
+        }
+
+            .post img {
+                margin-bottom: 5px; /* Khoảng cách giữa hình ảnh và nội dung */
+                width: 100%; /* Đảm bảo hình ảnh không quá rộng */
+            }
+
+        .post-content {
+            overflow: hidden; /* Ẩn bất kỳ nội dung nào vượt quá khung */
+            text-overflow: ellipsis; /* Thêm dấu ba chấm (...) khi nội dung vượt quá */
+            display: -webkit-box; /* Sử dụng thuộc tính box để xử lý vấn đề */
+            -webkit-line-clamp: 3; /* Số dòng tối đa mà nội dung có thể hiển thị */
+            -webkit-box-orient: vertical;
+        }
+
+        .post h3 {
+            margin-top: 0; /* Loại bỏ khoảng cách trên cùng của tiêu đề */
+            font-size: 14px;
+        }
+
+        .post a {
+            display: block; /* Biến liên kết thành một khối để có thể căn lề và thêm padding */
+            text-align: center; /* Căn giữa nút "Đọc thêm" */
+            padding: 5px 0; /* Khoảng cách giữa các bên của nút */
+            background-color: #f0f0f0; /* Màu nền của nút */
+            color: #333; /* Màu chữ của nút */
+            text-decoration: none; /* Loại bỏ gạch chân của liên kết */
+        }
+
+            .post a:hover {
+                background-color: #e0e0e0; /* Màu nền khi di chuột vào nút */
+            }
+
+            .wrapper {
+                display: flex;
+                flex-direction: column;
+                min-height: 150vh;
+            }
+
+            main{
+                flex: 1;
+            }
+
+            footer{
+                background-color:black;
+                color: white;
+                padding: 20px;
+            }
+    </style>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </head>
 <body>
-	<header>
-		<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow " style="padding: 0">
-			<div class="container-fluid">
+    <main class="wrapper">
+        <header>
+            <div class="banner">
+                <h1>LEARN WITH ONLY A</h1>
+            </div>
+            <nav" style="display: flex;">
+                <ul class="menu" style="margin-right: 30vh; margin-left:500px;">
+                    <li><a href="/Home/Index">Trang chủ</a></li>
+                    <li><a href="/ClassRooms">Lớp học</a></li>
+                    <li><a href="/ClassRooms/GetAllHomeWork">Bài tập</a></li>
+                    <!-- <li><a href="thoikhoabieu.html" >Thời khóa biểu</a></li>  -->
+                </ul>
+                <div class="menu" style="margin-left: auto;">
+                    <partial name="_LoginPartial" />
+                </div>
+                </nav>
 
-				@if (User.Identity.IsAuthenticated)
-				{
-					<a class="navbar-brand" asp-area="" asp-controller="ClassRooms" asp-action="Index" style="font-family: 'Poppins', sans-serif; padding: 0">
-						<img src="/images/Logo_Web.png" alt="Logo" width="70" height="auto">
-						
-					</a>
-				}
-				else
-				{
-					<a class="navbar-brand" asp-area="Identity" asp-page="/Account/Index" style="font-family: 'Poppins', sans-serif; padding: 0">
-						<img src="/images/Logo_Web.png" alt="Logo" width="70" height="auto">
-						
-					</a>
-				}
-
-
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-						aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="navbar-collapse collapse d-sm-inline-flex justify-content-end">
-					<partial name="_LoginPartial" />
-				</div>
-			</div>
-		</nav>
-	</header>
-	<div class="container-fluid d-flex justify-content-center align-items-center " style="
-                                                                                            background-image: url(/images/hinhnen.jpg);
-                                                                                            background-repeat: no-repeat;
-                                                                                            background-size: cover;
-                                                                                            height: 91vh;
-																						">
-		<main role="main">
-			@RenderBody()
-		</main>
-	</div>
-
-
-	<script>
-		function updateDateTime() {
-			var currentDateTime = new Date();
-			var hours = currentDateTime.getHours();
-			var minutes = currentDateTime.getMinutes();
-			var seconds = currentDateTime.getSeconds();
-			var day = currentDateTime.getDate();
-			var month = currentDateTime.getMonth() + 1; // Tháng bắt đầu từ 0
-			var year = currentDateTime.getFullYear();
-			var weekday = currentDateTime.getDay();
-
-			hours = (hours < 10) ? "0" + hours : hours;
-			minutes = (minutes < 10) ? "0" + minutes : minutes;
-			seconds = (seconds < 10) ? "0" + seconds : seconds;
-
-			day = (day < 10) ? "0" + day : day;
-			month = (month < 10) ? "0" + month : month;
-
-			var weekdays = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
-			var weekdayName = weekdays[weekday];
-
-			// Định dạng thời gian
-			var formattedDateTime = weekdayName + " • " + day + "/" + month + "/" + year + " " + hours + ":" + minutes + ":" + seconds;
-
-			// Hiển thị thời gian
-			document.getElementById("currentDateTime").innerText = formattedDateTime;
-		}
-
-		// Cập nhật thời gian mỗi giây
-		setInterval(updateDateTime, 1000);
-
-		// Gọi hàm updateDateTime lần đầu tiên để hiển thị thời gian ngay từ khi trang được tải
-		updateDateTime();
-	</script>
-
-
-	<script src="~/lib/jquery/dist/jquery.min.js"></script>
-	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="~/js/site.js" asp-append-version="true"></script>
-
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-	@await RenderSectionAsync("Scripts", required: false)
+        </header>
+        <main>
+            @RenderBody()
+        </main>
+        <footer>
+            <p class="text-center"> Bản quyền thuộc về ONLY A - 2024</p>
+        </footer>
+    </div>
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
