--- a/DoAnMon/Views/Shared/_LoginPartial.cshtml
+++ b/DoAnMon/Views/Shared/_LoginPartial.cshtml
@@ -47,6 +47,7 @@
 
     .custom-padding{
         padding-bottom: 15px;
+        font-size: 12px;
     }
 
 </style>
@@ -64,10 +65,10 @@
             <a class="nav-link text-dark dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">@name</a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                 <p class="dropdown-item custom-padding">MSSV: @user.Mssv</p>
-                <p class="dropdown-item custom-padding">Email: @user.Email</p> 
-                <a class="text-dark dropdown-item nav-link" asp-area="Identity" asp-page="/Account/Manage/ChangePassword" title="Manage" style="padding-left: 16px;">Đổi mật khẩu</a>
-                <form class="form-inline dropdown-item" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                    <button type="submit" class="btn btn-link text-dark" style="padding: 0; text-decoration: none; width: 100%; margin-bottom: 0; text-align:left;">Logout</button>
+                <p class="dropdown-item custom-padding">Email: @user.Email</p>
+                <a class="text-dark dropdown-item nav-link" asp-area="Identity" asp-page="/Account/Manage/ChangePassword" title="Manage" style="font-size: 12px;margin-left: -49px;color: black;margin-top: -10px;">Đổi mật khẩu</a>
+                <form class="form-inline dropdown-item" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" style="margin-top: -5px;">
+                    <button type="submit" class="btn btn-link text-dark" style="padding: 0; text-decoration: none; width: 100%; margin-bottom: 0; text-align:left;color: black;font-size:12px;">Logout</button>
                 </form>
             </div>
         </li>
