--- a/DoAnMon/wwwroot/assets/css/bootstrap.css
+++ b/DoAnMon/wwwroot/assets/css/bootstrap.css
@@ -916,7 +916,7 @@ a {
 a:hover,
 a:focus {
   color: #2a6496;
-  text-decoration: underline;
+  text-decoration: none;
 }
 a:focus {
   outline: thin dotted;
