--- a/DoAnMon/Views/Shared/_Layout.cshtml
+++ b/DoAnMon/Views/Shared/_Layout.cshtml
@@ -259,7 +259,7 @@
                 <ul class="menu" style="margin-right: 30vh; margin-left:500px;">
                     <li><a href="/Home/Index">Trang chủ</a></li>
                     <li><a href="/ClassRooms">Lớp học</a></li>
-                    <li><a href="/ClassRooms/GetAllHomeWork">Bài tập</a></li>
+                    <li><a href="/BaiTaps">Bài tập</a></li>
                     <!-- <li><a href="thoikhoabieu.html" >Thời khóa biểu</a></li>  -->
                 </ul>
                 <div class="menu" style="margin-left: auto;">
