--- a/DoAnMon/Views/ClassRooms/Index.cshtml
+++ b/DoAnMon/Views/ClassRooms/Index.cshtml
@@ -44,7 +44,8 @@
     /* Định dạng hình ảnh */
     .image-frame img {
         width: 100%; /* Đảm bảo hình ảnh chiếm đầy đủ chiều rộng của khung */
-        height: auto; /* Đảm bảo tỷ lệ khung hình ảnh được duy trì */
+        height: 150px; /* Đảm bảo tỷ lệ khung hình ảnh được duy trì */
+        object-fit: cover;
     }
 
     /* Định dạng menu dọc */
